# cs-exercises

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.3.2-pre1  CMakeLists.txt.user.db210cd  README.md
asio/: CMakeLists.txt
asio/src/: tcp.cpp  timer1.cpp
containers/: README.md
csgtest/: CMakeLists.txt
csgtest/include/: cs_math.h  csgtest.h  test_sort.hpp
csgtest/src/: cs_math.cpp  csgtest.cpp  main.cpp
ipc/: CMakeLists.txt
ipc/src/: consumer.cpp  producer.cpp.autosave  pyipc.cpp  tcp_producer.cpp  tcp_subscriber.cpp  tests.cpp
linkedlist/: CMakeLists.txt  CMakeLists.txt~  README.md
linkedlist/include/: llist.h  llist.h~
linkedlist/src/: main.cpp
ocado/: CMakeLists.txt  CMakeLists.txt~
ocado/include/: ocado.h
ocado/src/: main.cpp
paths/: README.md  dijkstra.py  utils.py
python/: README.md
python/algorithms/: README.md
python/algorithms/dynamic/: hanoi_iterative.py  hanoi_recursive.py  max_subarray.py  max_subarray_hacker.py  nth_step.py  permutation_no_dups.py  power_set.py
python/algorithms/hash/: anagram_brut_force.py  count_triplets.py
python/algorithms/linkedlists/: README.md  linkedlist.py
python/algorithms/searching/paths/: path_search.py
python/algorithms/sorting/: README.md  bubble.py  count_sort.py  max_priority_queue.py  median_stream.py  merge.py  partition.py  quick_selection.py  quick_sort.py  selection.py
python/algorithms/sorting/merge/: merge_top.py
python/algorithms/stacks_and_queues/: README.md  castle.py  fib.py  is_balanced_v1.py  largest_rectangle.py  min_max_riddle.py  min_max_riddle_v2.py  queue.py
python/algorithms/stacks_queues_tmp/: README.md  arithmetic_parser.py  is_balanced.py
python/algorithms/trees/: README.md  bst.py  heap.py
python/machine_learning_models/: cifar_10_models.py
python/machine_learning_utils/: utils.py
python/zmq_examples/: reply_server.py  request_client.py  zmq_publisher.py  zmq_subscriber.py
python/zmq_examples/examples/: camera_publisher.py  camera_subscriber.py  client.py  server.py
robotics/: Chapter 6.ipynb  Chapter5.ipynb  Chapter6-two-link.ipynb  FT Bias and Gravity estimation.ipynb  Orientation.ipynb  README.md  SpringMass.ipynb  dynamics.py  pid.py  pid_example.py  three_link_robot.py
robotics/simulation/robot_sim/: sim.py  timings_0.json  visualShapeBench.json_0.json
robotics/simulation/robot_sim/data/wall/: wall.urdf
sandbox/: CMakeLists.txt
sandbox/include/: binarygap.h  counting.h  oddoccurencesinarray.h  sorting.h  tapeEquilibrium.h
sandbox/src/: main.cpp
searching/: CMakeLists.txt
searching/include/: bst.h
searching/paths/: README.md  examples.py  path_search.py
searching/src/: bst_example.cpp
sorting/: CMakeLists.txt  CMakeLists.txt~  README.md
sorting/include/: heapsort.h  insertion_sort.h  merge_sort.h  quick_sort.h
sorting/pysort/: max_priority_queue.py  merge.py  quick_selection2.py  quick_sort.py  selection.py
sorting/pysort/merge/: merge_bottom.py
sorting/src/: main.cpp
sorting/src/sorting/: sort.cpp
statistics/: Bootstrap.ipynb  Conjugate gradient descent.ipynb  Estimating the Hessian vector product.ipynb
statistics/Linear Algebra/: Singular Value Decomposition.ipynb  projections.ipynb
statistics/cs231-assignment2/: FullyConnectedNets.ipynb  requirements.txt
statistics/cs231-assignment2/cs231n/: solver.py
statistics/cs231n/: BatchNormalization.ipynb  CIFAR-10 classification.ipynb  FullyConnectedNets.ipynb  README.md
statistics/cs231n/cs231n/: layers.py  optim.py  solver.py
statistics/cs231n/cs231n/classifiers/: fc_net.py
statistics/linear_algebra/: Singular Value Decomposition.ipynb  projections.ipynb
statistics/regression/: Spherical regression.ipynb  TileCoding.ipynb
statistics/tensorflow/: CIFAR-10 classification.ipynb  ConvolutionNet.ipynb
stl/: CMakeLists.txt
stl/include/: stl_examples.h
stl/src/: main.cpp
string/: CMakeLists.txt  CMakeLists.txt~
string/include/: mirror.h
string/src/: main.cpp
trees/: CMakeLists.txt  README.md
trees/include/: bstree.h
trees/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: utils.h
